# autogit

./: .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg  setup.py
autogit/: git.py  installer.py  main.py  pre_commit_custom.py  repo.py  repomanager.py  token.py  vpn.py
gitmanager/: git.py  main.py
