[metadata]
name = autogit
version = 1.0.0
author = Quinten Roets
author_email = quinten.roets@gmail.com
url = https://github.com/quintenroets/music
license = MIT

[options]
packages = find:
include_package_data = True
package_dir =
    = .
    
install_requires =
    gui @ git+https://github.com/quintenroets/gui
    isort
    PyGithub
    quinten-cli
    superpathlib

[options.entry_points]
console_scripts =
    autogit = autogit.main:main
    vpn = autogit.vpn:main
    pre-commit-custom = autogit.pre_commit_custom:main

[options.packages.find]
where = .

[bdist_wheel]
universal = true
